// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesList with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="visible-for-mobile"
    >
      Expenses
    </div>
    <div
      className="visible-for-desktop"
    >
      Expense
    </div>
    <div
      className="visible-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message"
    >
      <span>
        No expenses!
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpensesList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="visible-for-mobile"
    >
      Expenses
    </div>
    <div
      className="visible-for-desktop"
    >
      Expense
    </div>
    <div
      className="visible-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpensesListItem
      expense={
        Object {
          "amount": 195,
          "createdAt": 0,
          "description": "Gum",
          "id": "1",
          "note": "",
        }
      }
      key="1"
    />
    <ExpensesListItem
      expense={
        Object {
          "amount": 109500,
          "createdAt": -345600000,
          "description": "Rent",
          "id": "2",
          "note": "",
        }
      }
      key="2"
    />
    <ExpensesListItem
      expense={
        Object {
          "amount": 4500,
          "createdAt": 345600000,
          "description": "Credit card",
          "id": "3",
          "note": "",
        }
      }
      key="3"
    />
  </div>
</div>
`;
